--- a/01_개요.ipynb
+++ b/01_개요.ipynb
@@ -214,7 +214,9 @@
   {
    "cell_type": "markdown",
    "id": "42867de1",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Script 방식\n",
     "\n",
@@ -336,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   },
   "toc": {
    "base_numbering": 1,
