--- a/01_개요.ipynb
+++ b/01_개요.ipynb
@@ -1,6 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bbb7bf8d-a25c-4b0c-baec-de52bc93a26f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#python github test\n",
+    "print(1+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd73bcd6-5698-4c65-93ad-bb79e6f5751a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "c8c6ac1e",
    "metadata": {
@@ -338,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
