--- a/01_개요.ipynb
+++ b/01_개요.ipynb
@@ -62,6 +62,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f96895b2-594b-4423-b95d-d937febeee4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hollow world\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test 2 \n",
+    "print('hollow world')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c8c6ac1e",
    "metadata": {
