--- a/03_자료구조.ipynb
+++ b/03_자료구조.ipynb
@@ -1898,19 +1898,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "id": "2c9a50ee-a872-4ba8-9454-bb898c695ab0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(50, 50)"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'f1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m f1[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m사과\u001b[39m\u001b[38;5;124m'\u001b[39m], f1\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m사과\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'f1' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1919,21 +1922,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "id": "b62159e0-c472-4e98-9767-1c9dbcbace56",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'없음'"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "# f1['딸기']  #없는 key 조회 -> 에러\n",
     "f1.get(\"딸기\") # 없는 key 조회 -> default 값을 반환(None)\n",
@@ -1942,19 +1936,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 6,
    "id": "d840da5f-533d-488d-832c-3c39fb313df9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'f1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m v \u001b[38;5;241m=\u001b[39m f1\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m귤\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;66;03m# 삭제하면서 value를 반환.\u001b[39;00m\n\u001b[0;32m      2\u001b[0m v\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'f1' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1964,19 +1961,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 8,
    "id": "cd6376d0-3096-4597-814e-306936a3a429",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'사과': 50, '수박': 5, '복숭아': 100}"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'f1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m f1\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'f1' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1988,10 +1988,7 @@
    "execution_count": 133,
    "id": "4f5b7ea8-db25-4759-b21a-92ce8e65af56",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -2007,7 +2004,7 @@
     }
    ],
    "source": [
-    "del f1['사과']"
+    "del f1('사과')"
    ]
   },
   {
@@ -2517,20 +2514,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 16,
    "id": "d2a32b55",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "s1 = {1, 2, 3, 4, 5}\n",
+    "s1 = {1, 2, 3, 4, 5,}\n",
     "s2 = {4, 5, 6, 7, 8, 9}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 18,
    "id": "e2d43f89",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2538,7 +2539,7 @@
        "{1, 2, 3, 4, 5, 6, 7, 8, 9}"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2550,9 +2551,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 20,
    "id": "36fe615d-e7f3-4eb3-ae83-a73008f32d79",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2560,7 +2563,7 @@
        "{4, 5}"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
