--- a/04_제어문_컴프리헨션.ipynb
+++ b/04_제어문_컴프리헨션.ipynb
@@ -110,15 +110,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9aa311a5",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "정수: 0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "입력한 값이 0입니다.\n",
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"정수:\"))\n",
+    "if num ==0:\n",
+    "    print(\"입력한 값이 0입니다.\")\n",
+    "else :\n",
+    "    print(\"you're good to go\")\n",
+    "    \n",
+    "print(\"done\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -275,15 +300,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "eed15246-330a-444e-9b9e-c05a84a33b35",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "도시이름:  안양\n"
+      "도시이름:  Los Angeles\n"
      ]
     },
     {
@@ -370,19 +397,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "6b11bde6",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "반복횟수 6\n"
+      "반복횟수 5\n"
      ]
     },
     {
@@ -394,7 +422,6 @@
       "3번째 실행\n",
       "4번째 실행\n",
       "5번째 실행\n",
-      "6번째 실행\n",
       "종료\n"
      ]
     }
@@ -449,9 +476,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 81,
    "id": "8defd2f6-bab5-49ff-beae-8d4baf12e1a3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "l = [10, 5, 2, 7, 20]"
@@ -459,10 +488,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 83,
    "id": "e0b3aa04-014b-411b-98ac-41a9056e7d13",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -479,14 +509,16 @@
    ],
    "source": [
     "for value in l:\n",
-    "    print(value + 5)"
+    "    r= print(value + 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 89,
    "id": "af8f33a3-9a53-4872-87da-4467a08f9831",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# l의 모든 값들에 5를 더한 것을 저장\n",
@@ -498,9 +530,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "id": "94728af9-480f-4596-9be2-c1e2808f63f8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -508,7 +542,7 @@
        "[15, 10, 7, 12, 25]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,14 +554,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f135b0cf-3b1c-43f0-9bf2-d3994cf866b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "id": "da0ce0f6",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[55], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m l \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m20\u001b[39m]\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m v \u001b[38;5;129;01min\u001b[39;00m l:\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28mlist\u001b[39m(v \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m5\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "l = [10, 5, 2, 7, 20]\n",
+    "for v in l:\n",
+    "    list(v * 5)\n",
+    "\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -597,17 +658,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 91,
    "id": "bc8c305f-36ae-42a4-86fc-6abf707eb2c5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18"
+       "23"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,15 +683,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 93,
    "id": "c1b4d299-c724-474e-bc2b-1cb473ff933b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[30, 18, 16, 23, 18, 19, 15, 20]\n",
+      "[24, 15, 25, 23, 11, 29, 13, 17, 30, 16, 26, 24, 26, 20]\n",
       "종료\n"
      ]
     }
@@ -644,6 +709,34 @@
     "\n",
     "print(nums)\n",
     "print(\"종료\")        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "975f65ed-f1fb-4d37-9860-f7d8e9d6339c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[24, 15, 25, 23, 11, 29, 13, 17, 30, 16, 26, 24, 26, 20]\n",
+      "수고하셨습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "numlist = []\n",
+    "while True:\n",
+    "    num = random.randint(10,30)\n",
+    "    numlist.append(num)\n",
+    "    if num ==20:\n",
+    "        break\n",
+    "print(nums)\n",
+    "print('수고하셨습니다.')"
    ]
   },
   {
@@ -674,25 +767,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 103,
    "id": "352d937b",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\t11\t21\t31\t41\t51\t61\t71\t81\t91\t"
+      "1-11-21-31-41-51-61-71-81-91-"
      ]
     }
    ],
    "source": [
     "for i in range(1, 100, 10):  #1 ~ 100-1 10+\n",
-    "    print(i, end=\"\\t\")"
+    "    print(i, end=\"-\")"
    ]
   },
   {
@@ -780,22 +874,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 113,
    "id": "33dd96c5",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 10\n",
-      "2 20\n",
-      "3 5\n",
-      "4 7\n"
+      "4 10\n",
+      "5 20\n",
+      "6 5\n",
+      "7 7\n"
      ]
     }
    ],
@@ -805,7 +900,7 @@
     "for index, value in enumerate(l):  # tuple 대입 적용.\n",
     "    if index == 0:\n",
     "        continue\n",
-    "    print(index, value)"
+    "    print(index,value)"
    ]
   },
   {
@@ -828,7 +923,7 @@
    ],
    "source": [
     "for index, value in enumerate(l, start=100): \n",
-    "    print(index, value)"
+    "    print(index, value)\n"
    ]
   },
   {
@@ -851,9 +946,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 115,
    "id": "0849924f-1ac5-422f-97d7-c46cf879060e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# 같은 index 값을 모으면 한사람의 정보\n",
@@ -865,9 +962,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 123,
    "id": "01ecb875-976b-42bc-b7db-6fda9d6e9733",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -886,9 +985,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 119,
    "id": "350fa4a2-faa5-4cde-9e1e-ab06dd78d791",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -896,8 +997,7 @@
      "text": [
       "이름: 홍길동, 나이: 20, 주소: 서울\n",
       "이름: 이순신, 나이: 25, 주소: 인천\n",
-      "이름: 유관순, 나이: 30, 주소: 부산\n",
-      "이름: 강감찬, 나이: 25, 주소: 광주\n"
+      "이름: 유관순, 나이: 30, 주소: 부산\n"
      ]
     }
    ],
@@ -920,130 +1020,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 143,
    "id": "afce8fe4-c07a-4a7a-af09-fb1e383c1e01",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 11,\n",
-       " 12,\n",
-       " 13,\n",
-       " 14,\n",
-       " 15,\n",
-       " 16,\n",
-       " 17,\n",
-       " 18,\n",
-       " 19,\n",
-       " 20,\n",
-       " 21,\n",
-       " 22,\n",
-       " 23,\n",
-       " 24,\n",
-       " 25,\n",
-       " 26,\n",
-       " 27,\n",
-       " 28,\n",
-       " 29,\n",
-       " 30,\n",
-       " 31,\n",
-       " 32,\n",
-       " 33,\n",
-       " 34,\n",
-       " 35,\n",
-       " 36,\n",
-       " 37,\n",
-       " 38,\n",
-       " 39,\n",
-       " 40,\n",
-       " 41,\n",
-       " 42,\n",
-       " 43,\n",
-       " 44,\n",
-       " 45,\n",
-       " 46,\n",
-       " 47,\n",
-       " 48,\n",
-       " 49,\n",
-       " 50,\n",
-       " 51,\n",
-       " 52,\n",
-       " 53,\n",
-       " 54,\n",
-       " 55,\n",
-       " 56,\n",
-       " 57,\n",
-       " 58,\n",
-       " 59,\n",
-       " 60,\n",
-       " 61,\n",
-       " 62,\n",
-       " 63,\n",
-       " 64,\n",
-       " 65,\n",
-       " 66,\n",
-       " 67,\n",
-       " 68,\n",
-       " 69,\n",
-       " 70,\n",
-       " 71,\n",
-       " 72,\n",
-       " 73,\n",
-       " 74,\n",
-       " 75,\n",
-       " 76,\n",
-       " 77,\n",
-       " 78,\n",
-       " 79,\n",
-       " 80,\n",
-       " 81,\n",
-       " 82,\n",
-       " 83,\n",
-       " 84,\n",
-       " 85,\n",
-       " 86,\n",
-       " 87,\n",
-       " 88,\n",
-       " 89,\n",
-       " 90,\n",
-       " 91,\n",
-       " 92,\n",
-       " 93,\n",
-       " 94,\n",
-       " 95,\n",
-       " 96,\n",
-       " 97,\n",
-       " 98,\n",
-       " 99,\n",
-       " 100)"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100)\n"
+     ]
     }
    ],
    "source": [
+    "import pprint\n",
+    "\n",
     "l = list(range(1, 101))\n",
     "l = tuple(range(1, 101))\n",
-    "l"
+    "print(l)"
    ]
   },
   {
@@ -1306,14 +1303,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 145,
    "id": "f31c1a5a-511b-4e6d-b7a6-6f1a929844de",
    "metadata": {
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -1322,7 +1320,7 @@
        "[10, 20, 30, 40, 50, 60, 70, 80, 90]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1360,6 +1358,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 147,
+   "id": "4e1f1212-4e36-4e66-b61e-fc19734e13a0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 30, 40, 50, 60, 70, 80, 90]"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[v for v in l2 if v% 10 == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 52,
    "id": "ce83c3e8-f271-44fb-b9b1-6ee8d819334f",
    "metadata": {},
@@ -1392,9 +1413,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 151,
+   "id": "19fc9c2b-d470-4c55-bf35-8b878349f479",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 8, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l3 = [\n",
+    "    [1, 2, 3], \n",
+    "    [4, 5, 6]\n",
+    "]\n",
+    "result = []\n",
+    "for values in l3:\n",
+    "    for v in values:\n",
+    "        if v % 2 == 0:\n",
+    "            result.append(v*2)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
    "id": "88ebb0e2-b395-419d-84aa-f47b0a202334",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1402,7 +1454,7 @@
        "[2, 8, 6, 8, 10, 8]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1417,9 +1469,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 159,
    "id": "12d2a958-097d-47ca-9603-6a6b1a8dd966",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1427,7 +1481,7 @@
        "{8}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,6 +1587,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5d135270-ef79-4ab3-9fe9-be69c64ab107",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_id = input(\"아이디를 입력하세요:\")\n",
+    "if len(user_id) >= 5:\n",
+    "    print('사용 가능합니다.')\n",
+    "else "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c243a8c-f690-4e56-a8f7-59270d1843c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "9c41deac-e9ad-4fcc-a381-8e78e47ad877",
    "metadata": {
@@ -1573,12 +1648,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 177,
    "id": "870c5113-dee9-4efe-98be-4c509a220137",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -1604,9 +1680,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 179,
    "id": "7e13f002-ef7c-4d0a-8ead-735c22933d58",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1614,7 +1692,7 @@
        "89.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1625,32 +1703,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "1bc48267-ae92-4e34-b69b-8166d31ef00a",
+   "execution_count": 181,
+   "id": "f6f6026b-9d0c-4f34-bfe4-7d65618bb8f5",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "slideshow": {
-     "slide_type": "skip"
-    }
+    "tags": []
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1-pass\n",
-      "2-pass\n",
-      "3-pass\n",
+      "평균 : 89\n"
+     ]
+    }
+   ],
+   "source": [
+    "jumsu = [100, 90, 100, 80, 70, 100, 80, 90, 95, 85]\n",
+    "sum_result = 0\n",
+    "\n",
+    "for v in jumsu:\n",
+    "    sum_result += v\n",
+    "\n",
+    "vs = sum_result/len(jumsu)\n",
+    "print(f'평균 : {int(vs)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "1bc48267-ae92-4e34-b69b-8166d31ef00a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0번, 100점-pass\n",
+      "1번, 90점-pass\n",
+      "2번, 100점-pass\n",
+      "3-fail\n",
       "4-fail\n",
-      "5-fail\n",
-      "6-pass\n",
-      "7-fail\n",
-      "8-pass\n",
-      "9-pass\n",
-      "10-fail\n"
+      "5번, 100점-pass\n",
+      "6-fail\n",
+      "7번, 90점-pass\n",
+      "8번, 95점-pass\n",
+      "9-fail\n"
      ]
     }
    ],
@@ -1659,7 +1761,7 @@
     "#   (ex: 0-pass, 1-pass, 2-fail)\n",
     "for i, v in enumerate(jumsu):  #, start=1):\n",
     "    if v >= avg_result:\n",
-    "        print(f\"{i}-pass\")\n",
+    "        print(f\"{i}번, {v}점-pass\")\n",
     "    else:\n",
     "        print(f\"{i}-fail\")"
    ]
@@ -1669,10 +1771,7 @@
    "execution_count": 17,
    "id": "e56cef72-f58c-4e25-9b9f-51f921a9f018",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1793,13 +1892,10 @@
    "execution_count": 6,
    "id": "d544185f-023f-46b2-a225-87b278ac1228",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "slideshow": {
      "slide_type": "skip"
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
