--- a/05_함수.ipynb
+++ b/05_함수.ipynb
@@ -176,6 +176,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 텀블러\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "텀블러님. 안녕하세요.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet3():\n",
+    "    print(f'{input()}님. 안녕하세요.')\n",
+    "\n",
+    "greet3()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {
     "slideshow": {
@@ -275,13 +302,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'13 님 안녕하세요.\\n반갑습니다.'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 인사말을  return하는 함수.\n",
     "def greet4(name):\n",
@@ -290,7 +328,7 @@
     "        return  # 함수 실행을 (정상적) 종료하고 호출한 곳으로 돌아가라. \n",
     "    txt = f\"{name} 님 안녕하세요.\\n반갑습니다.\"\n",
     "    return txt\n",
-    "    "
+    "greet4(13)"
    ]
   },
   {
@@ -372,6 +410,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate10(a,b):\n",
+    "    c1= a+b\n",
+    "    c2= a-b\n",
+    "    c3= a*b\n",
+    "    c4= a/b\n",
+    "    c5 = a**b\n",
+    "    print(c1,c2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 -2\n"
+     ]
+    }
+   ],
+   "source": [
+    "calculate10(1,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [
@@ -435,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +531,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세요\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,6 +575,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None None None\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet5(None, None, None)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
    "outputs": [
@@ -504,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -518,29 +623,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "greet6() missing 1 required positional argument: 'age'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[52], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mgreet6\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: greet6() missing 1 required positional argument: 'age'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 1 5\n"
      ]
     }
    ],
    "source": [
-    "greet6()"
+    "greet6(1,3,5)"
    ]
   },
   {
@@ -565,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -658,6 +755,8 @@
     }
    },
    "source": [
+    "\n",
+    "# 여기서부터 복습하기!\n",
     "### 가변인자 (Var args) 파라미터\n",
     "\n",
     "-   호출하는 쪽에서 argument로 0 ~ n개의 값을 나열해서 여러개의 값들을 전달하면 **tuple이나 dictionary로 묶어서** 받을 수있도록 선언하는 parameter\n",
@@ -691,7 +790,7 @@
     "    result = 0\n",
     "    for v in nums:\n",
     "        result += v\n",
-    "    print(result)"
+    "    print(result)\n"
    ]
   },
   {
@@ -765,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -791,13 +890,13 @@
     }
    ],
    "source": [
-    "d = {\"name\":\"홍길동\", \"나이\":20, \"주소\":\"서울\"}\n",
+    "d = {\"name\":\"홍길동\", \"나이\":20, \"주소\":\"서울\"} \n",
     "print_info(**d) # **가변인자에 딕셔너리의 값들을 전달하는 경우: **딕셔너리"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1078,6 +1177,55 @@
    "source": [
     "hello()  # 함수 호출 => 실행"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hello():\n",
+    "    print(input())\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 안녕하세용\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세용\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1423,6 +1571,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plus_ff = lambda n1,n2 : n1+n2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plus_ff(3,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 126,
    "metadata": {},
    "outputs": [],
@@ -1599,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1620,22 +1797,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. 시작 정수, 끝 정수를 받아 그 사이의 모든 정수의 합을 구해서 반환하는 함수를 구현(ex: 1, 20 => 1에서 20 사이의 모든 정수의 합계)\n",
+    "\n",
+    "def sumfromto(a,b):\n",
+    "    result = 0 \n",
+    "    for v in range(a,int(b+1)):\n",
+    "        result  += v \n",
+    "    return result\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sumfromto():\n",
+    "    a = int(input(print(\"시작 정수를 입력하세요:\")))\n",
+    "    b = int(input(print(\"끝 정수를 입력하세요:\")))\n",
+    "    result = 0 \n",
+    "    for v in range(a,b+1):\n",
+    "        result  += v \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "시작 정수를 입력하세요:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "None 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "끝 정수를 입력하세요:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "None 10\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "15"
+       "55"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "summation(1, 5, True)"
+    "sumfromto()\n",
+    "# 1과 3을 유저가 직접 입력하도록 만들오보고 싶은데 계속 잘 안된다. \n",
+    "# 순서를 뒤집어보니까 가능하다. int(input(print()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summation(1, 5, False)"
    ]
   },
   {
@@ -1670,22 +1928,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 내 방식 \n",
+    "def sumfromto(a=0,b=10):\n",
+    "    result = 0 \n",
+    "    for v in range(a,b+1):\n",
+    "        result  += v \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "190"
+       "40"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "summation2(stop=20)"
+    "sumfromto(6)"
    ]
   },
   {
@@ -1746,6 +2018,97 @@
     "# - 30이상이면 비만으로 하는데\n",
     "# 몸무게와 키를 매개변수로 받아 비만인지 과체중인지 반환하는 함수를 구현하시오."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def amifat():\n",
+    "    a= float(input(print(\"키를 입력하세요(cm단위):\")))\n",
+    "    b= int(input(print(\"몸무게를 입력하세요:\")))\n",
+    "    bmi = b/a**2\n",
+    "    result = 0\n",
+    "    if bmi < 18.5:\n",
+    "        result = 'underweight'\n",
+    "    elif bmi < 25:\n",
+    "        result = 'normal'\n",
+    "    elif bmi < 30:\n",
+    "        result = 'overweight'\n",
+    "    elif bmi >= 30:\n",
+    "        result = 'obese'\n",
+    "    print(f\"Your height is {a}cm, weight is {b}kg and bmi is {bmi}.\\nYou are {result}.\")\n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "키를 입력하세요(cm단위):\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "None 1.73\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "몸무게를 입력하세요:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "None 70\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your height is 1.73cm, weight is 70kg and bmi is 23.38868655818771.\n",
+      "You are normal.\n"
+     ]
+    }
+   ],
+   "source": [
+    "amifat()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
