--- a/02_변수와 데이터타입.ipynb
+++ b/02_변수와 데이터타입.ipynb
@@ -964,14 +964,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "시 이름:  광주\n"
+      "시 이름:  Los Angeles\n"
      ]
     }
    ],
@@ -998,8 +1000,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdin",
@@ -1166,18 +1170,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "숫자: -20\n"
+      "숫자: 30\n"
      ]
     }
    ],
@@ -1187,14 +1192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "음수\n"
+      "양수\n"
      ]
     }
    ],
@@ -1214,21 +1221,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "숫자: 10\n"
+      "숫자: -50\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "양수\n"
+      "음수\n"
      ]
     }
    ],
@@ -2066,8 +2075,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2087,8 +2098,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
+   "execution_count": 39,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
